# universal-parser

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_ANALYTICS_README.md  AI_README.md  API_INTEGRATIONS_README.md  CHANGELOG.md  DASHBOARD_README.md  DEPLOYMENT.md  DEVELOPMENT_REPORT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.fastapi  Dockerfile.test  GITHUB_SETUP.md  GIT_COMMANDS.md  INTERNATIONAL_README.md  LICENSE  LINTER_FIXES_REPORT.md  MANUAL_GIT_SETUP.md  MARKETPLACES_README.md  Makefile  NICHE_ANALYSIS_README.md  PERFORMANCE_SCALABILITY_README.md  QUICK_START.md  README.md  README_FASTAPI.md  RUSSIAN_MARKETPLACES_README.md  SOCIAL_FEATURES_README.md  TESTING_GUIDE.md  VERSION  alembic.ini  alert_system.py  analytics.py  config.example  config.py  database.py  db.py  docker-compose.dashboard.yml  (+34 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 003_add_subscription_tables.py  004_add_social_tables.py  20240314_0001_create_parse_results.py
alerts/: __init__.py  checker.py  service.py
analytics/: __init__.py  ai_advisor.py  parser.py  service.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/graphql/: schema.py
app/api/v1/endpoints/: advanced_analytics.py  ai.py  api_analytics.py  automation.py  graphql.py  international.py  items.py  marketplaces.py  niche_analysis.py  parsing.py  payment.py  performance.py  report_scheduler.py  russian_marketplaces.py  social.py  subscription.py  webhooks.py  websocket.py
app/core/: cache.py  config.py  database.py  i18n.py  i18n_old.py  rate_limiting.py
app/models/: alert.py  item.py  social.py  subscription.py  user.py
app/schemas/: ai.py  item.py  niche_analysis.py  parsing.py  social.py  subscription.py  user.py
app/services/: advanced_analytics_service.py  ai_niche_discovery.py  ai_service.py  api_analytics_service.py  cache_optimizer.py  currency_service.py  database_optimizer.py  demand_forecasting.py  dynamic_pricing.py  item_service.py  marketplace_parsers.py  monitoring_service.py  niche_analysis_service.py  notification_engine.py  parsing_service.py  payment_service.py  performance_monitor.py  report_scheduler_service.py  russian_marketplace_parsers.py  social_service.py  subscription_service.py  timezone_service.py  trend_detector.py  webhook_service.py  websocket_service.py
app/translations/: en.json  ru.json
billing/: __init__.py  providers.py  service.py
bot/: __init__.py  commands.py  context.py  keyboards.py  middleware.py  runner.py  services.py  states.py
core/: __init__.py  clients.py  config.py  database.py  logging.py  tasks.py
dashboard/: config.py  main.py  requirements.txt  utils.py
dashboard/pages/: __init__.py  advanced_analytics.py  international.py  monetization.py  report_scheduler.py  russian_marketplaces.py  social.py
design/: tokens.json  web.css
integrations/: __init__.py  directories.py  news.py
mobile/: Dockerfile  README.md  nginx.conf  pubspec.yaml
navigator/: __init__.py  guides.py  logistics.py  suppliers.py
profiles/: __init__.py  import_export.py  manager.py  models.py  monitoring.py  parsing_profiles.json  service.py  tip_service.py
tests/: test_alert_system.py  test_alerts.py  test_analytics.py  test_billing.py  test_database.py  test_integrations.py  test_monitoring.py  test_navigator.py  test_parser.py  test_performance.py  test_profiles.py  test_scheduler.py  test_subscription.py  test_tasks.py  test_telegram_bot.py  test_tg_commands.py
web/: next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/items/: page.tsx
web/app/parsing/: page.tsx
web/app/settings/: page.tsx
